# Quant-System-Backend

./: CMakeLists.txt  LICENSE  README.md  main.cpp
data/: AAPL.csv  MSFT.csv
docs/: architecture.md
examples/moving_average_crossover/: ma_crossover_config.json
include/qs/: BackTestEngine.hpp  Bar.hpp  Config.hpp  DataFeed.hpp  ExecutionModel.hpp  Logger.hpp  MeanReversionStrategy.hpp  Order.hpp  Portfolio.hpp  Position.hpp  RiskMetrics.hpp  Strategy.hpp  TimeSeries.hpp  Trade.hpp
src/backtest/: BackTestEngine.cpp
src/core/: Bar.cpp  Portfolio.cpp  RiskMetrics.cpp  TimeSeries.cpp
src/data/: CsvDataFeed.cpp
src/exec/: SimpleExecutionModel.cpp
src/strategy/: MeanReversionStrategy.cpp  MomentumStrategy.cpp
src/util/: Config.cpp  Logger.cpp
tests/: CMakeLists.txt  test_backtest_engine.cpp  test_bar.cpp  test_portfolio.cpp
